--- a/Setup/SetupUI/Views/MainView.xaml
+++ b/Setup/SetupUI/Views/MainView.xaml
@@ -20,6 +20,10 @@
         <DataTemplate DataType="{x:Type viewModels:SetupViewModel}">
             <views:SetupView/>
         </DataTemplate>
+
+        <DataTemplate DataType="{x:Type viewModels:SelectProductViewModel}">
+            <views:SelectProductView/>
+        </DataTemplate>
     </Window.Resources>
 
     <Grid>
