--- a/Setup/SetupUI/Views/ProgressView.xaml
+++ b/Setup/SetupUI/Views/ProgressView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="SetupUI.Views.SetupView"
+﻿<UserControl x:Class="SetupUI.Views.ProgressView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SetupUI.Views"
-             mc:Ignorable="d" Loaded="OnLoaded"
+             mc:Ignorable="d"
              d:DesignHeight="400" d:DesignWidth="600">
 
     <UserControl.Resources>
@@ -19,7 +19,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="15"/>
+            <RowDefinition Height="10"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="3"/>
             <RowDefinition Height="Auto"/>
@@ -27,7 +27,8 @@
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Progression de l'installation" Grid.Row="1" FontSize="40" Margin="30 0 0 0" Foreground="{StaticResource TextForegroundColor}"/>
+        <TextBlock Text="{Binding Path=Title, FallbackValue=Progress}" 
+                   Grid.Row="1" FontSize="30" Margin="30 0 0 0" Foreground="{StaticResource TextForegroundColor}"/>
         <ProgressBar Grid.Row="3" Height="20" Value="{Binding Path=ProgressPercentage, FallbackValue=50}" 
                      Margin="30 0 30 0" Foreground="{StaticResource ButtonBackgroundColor}" Opacity="0.6"/>
         <TextBlock Text="{Binding Path=Status, FallbackValue=[Status]}" Grid.Row="5" Margin="30 0 0 0"/>
