--- a/Setup/PluginScribens_Word.Setup/Product.wxs
+++ b/Setup/PluginScribens_Word.Setup/Product.wxs
@@ -9,6 +9,9 @@
     <Feature Id="ProductFeature" Title="Plugin Scribens pour Microsoft Office" Level="1">
       <ComponentGroupRef Id="ProductComponents" />
       <ComponentRef Id="WordRegistryComponent"/>
+      <ComponentRef Id="RemoveFilesComponent"/>
+      <ComponentRef Id="RemoveResourceFilesComponent"/>
+      <ComponentRef Id="RemoveInstallFolderComponent"/>
     </Feature>
 
     <Property Id="InstallDir" Value="[INSTALLFOLDER]"/>
@@ -21,10 +24,24 @@
   <Fragment>
     <Directory Id="TARGETDIR" Name="SourceDir">
       <Directory Id="ProgramFilesFolder">
+        
         <Directory Id="INSTALLFOLDER" Name="Scribens">
           <Directory Id="MSWORD" Name="MS Word">
-            <Directory Id="FR" Name="fr"/>
-          </Directory>
+            <Directory Id="FR" Name="fr">
+              <Component Id="RemoveResourceFilesComponent" Guid="82528E97-85B8-4ED5-90F1-0D0CE65E8098">
+                <RemoveFile Id="RemoveResourceFiles" Name="*.*" On="uninstall"/>
+              </Component>
+            </Directory>  
+
+              <Component Id="RemoveFilesComponent" Guid="D811485A-F658-4C00-9BFF-DB4BF1E6930F">
+                <RemoveFile Id="RemoveFiles" Name="*.*" On="uninstall"/>
+                <RemoveFolder Directory="FR" On="uninstall" Id="RemoveResourceFolder"/>
+              </Component>
+            </Directory>
+
+          <Component Id="RemoveInstallFolderComponent" Guid="08C032EB-3142-4A12-BFD8-3AC3E0B5FFF2">
+            <RemoveFolder Directory="MSWORD" On="uninstall" Id="RemoveInstallFolder"/>
+          </Component>
         </Directory>
 
         <Component Id="WordRegistryComponent">
